<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout style="@style/order_ll_h" >

                <TextView
                    style="@style/order_text_style"
                    android:text="@string/order_number" />

                <TextView
                    android:id="@+id/tv_orl_number"
                    style="@style/order_text_style"
                    android:layout_marginLeft="4dip"
                    android:text="123124214321" />
            </LinearLayout>

            <LinearLayout style="@style/order_ll_h" >

                <TextView
                    style="@style/order_text_style"
                    android:text="@string/order_lsum" />

                <TextView
                    style="@style/order_text_style"
                    android:layout_marginLeft="4dip"
                    android:text="@string/goods_item_price"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/tv_orl_sum"
                    style="@style/order_text_style"
                    android:text="123.00"
                    android:textColor="@color/red" />
            </LinearLayout>

            <LinearLayout style="@style/order_ll_h" >

                <TextView
                    style="@style/order_text_style"
                    android:text="@string/order_time" />

                <TextView
                    android:id="@+id/tv_orl_time"
                    style="@style/order_text_style"
                    android:layout_marginLeft="4dip"
                    android:text="2014-08-08 14:54:32" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/order_route" />
    </LinearLayout>

    <LinearLayout
        style="@style/order_ll_h"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip" >

        <TextView
            style="@style/order_text_style"
            android:text="@string/order_client" />

        <TextView
            android:id="@+id/tv_orl_client"
            style="@style/order_text_style"
            android:layout_marginLeft="4dip"
            android:text="山西省运城市"
            android:textColor="#555" />

        <TextView
            android:id="@+id/tv_orl_phone"
            style="@style/order_text_style"
            android:layout_marginLeft="4dip"
            android:text="18511111111"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_orl_linkman"
            style="@style/order_text_style"
            android:layout_marginLeft="4dip"
            android:text="张三"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="8dip"
        android:layout_marginTop="8dip"
        android:background="@mipmap/filter_spider_line" />

    <ListView
        android:id="@+id/lv_order_products_list"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:divider="@null"
        android:paddingLeft="18dip"
        android:paddingRight="18dip" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="8dip"
        android:layout_marginTop="8dip"
        android:background="@mipmap/filter_spider_line" />

    <LinearLayout
        style="@style/order_ll_h"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip" >

        <TextView
            style="@style/order_text_style"
            android:text="@string/order_state"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_orl_state"
            style="@style/order_text_style"
            android:layout_marginLeft="4dip"
            android:text="已完成" />
    </LinearLayout>

</LinearLayout>