<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:paddingBottom="6dip"
        android:paddingLeft="12dip"
        android:paddingRight="12dip"
        android:paddingTop="6dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cart_edit_count"
            android:textColor="#333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_dialog_cart_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/textred"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dip"
            android:layout_toLeftOf="@+id/tv_dialog_cart_price"
            android:text="@string/goods_item_price"
            android:textColor="@color/textred"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_dialog_cart_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_dialog_cart_price"
            android:layout_marginTop="4dip"
            android:textColor="@color/textred"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dialog_cart_price"
            android:layout_marginRight="2dip"
            android:layout_marginTop="6dip"
            android:layout_toLeftOf="@+id/tv_dialog_cart_count"
            android:text="@string/cart_count"
            android:textColor="@color/textred"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="14dip"
        android:background="#D2D2D2" />

    <include layout="@layout/view_dialognum_edittext" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="14dip"
        android:background="#D2D2D2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="horizontal"
        android:padding="12dip" >

        <Button
            android:id="@+id/btn_cart_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dip"
            android:background="@drawable/dialog_cancel_selector"
            android:text="@string/cart_edit_cancel"
            android:textColor="#000" />

        <Button
            android:id="@+id/btn_cart_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_ok_selector"
            android:text="@string/cart_edit_ok"
            android:textColor="#FFF" />
    </LinearLayout>

</LinearLayout>