<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fadingEdge="none"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/mainbg"
        android:orientation="vertical" >

        <com.sq.bxstore.view.SquareLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/pic_hint_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/semitransparentcircle"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:visibility="invisible" >

                    <TextView
                        android:id="@+id/pic_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1/1"
                        android:textColor="#7a000000" />
                </LinearLayout>
            </FrameLayout>
        </com.sq.bxstore.view.SquareLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#EFEFEF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#F7F9F8"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingLeft="18dip"
            android:paddingRight="18dip"
            android:paddingTop="8dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_item_price"
                android:textColor="@color/textred"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="0.0"
                android:textColor="@color/textred"
                android:textSize="22sp" />

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#DCDEDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            android:background="@mipmap/product_detail_bg"
            android:orientation="vertical"
            android:padding="12dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:text="@string/goods_name"
                    android:textColor="#6f7072"
                    android:textSize="@dimen/textSize_18" />

                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:textColor="#333"
                    android:textSize="@dimen/textSize_18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:text="@string/goods_brand"
                    android:textColor="#6f7072"
                    android:textSize="@dimen/textSize_18" />

                <TextView
                    android:id="@+id/tv_product_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:text=""
                    android:textColor="#333"
                    android:textSize="@dimen/textSize_18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:text="@string/goods_category"
                    android:textColor="#6f7072"
                    android:textSize="@dimen/textSize_18" />

                <TextView
                    android:id="@+id/tv_product_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:textColor="#333"
                    android:textSize="@dimen/textSize_18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:text="@string/goods_stock"
                    android:textColor="#6f7072"
                    android:textSize="@dimen/textSize_18" />

                <TextView
                    android:id="@+id/tv_product_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:text=""
                    android:textColor="#333"
                    android:textSize="@dimen/textSize_18" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/product_detail_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dip"
            android:weightSum="1" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/product_detail_shoppingcart" />

            <TextView
                style="@style/product_text_style"
                android:layout_marginLeft="6dip"
                android:text="@string/goods_count"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="0dip"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/view_num_edittext" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goodsdetail_commentlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:background="@mipmap/product_detail_bg"
            android:orientation="horizontal"
            android:paddingBottom="12dip"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:paddingTop="16dip" >

            <TextView
                android:id="@+id/tv_product_people"
                style="@style/product_text_style"
                android:layout_gravity="center_vertical"
                android:textColor="@color/textgrey" />

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/rb_product_marking"
                style="@style/product_text_style"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/product_detail_new" />
        </LinearLayout>

        <ListView
            android:id="@+id/goodsdetail_commentlist"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@color/mainbg"
            android:dividerHeight="5dip"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:footerDividersEnabled="true"
            android:listSelector="@drawable/list_item_selector"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:scrollingCache="false"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>